<resources>
    <string name="app_name">RefriPlus</string>

    <string name="login_dialog_hint_email">Email</string>
    <string name="login_dialog_hint_password">Password</string>
    <string name="login_dialog_hint_confirm_password">Confirm Password</string>

    <string name="new_ingredient_hint">Ingredient name (e.g., Chicken Breast)</string>
    <string name="quantity_hint">Quantity (e.g., 1)</string>
    <string name="expiration_hint">Expiration…</string>

    <!-- item_ingredient.xml -->
    <string name="item_ingredient_accessibility_delete_button">Delete ingredient</string>
    <string name="item_ingredient_preview_name">Zanahoiria</string>
    <string name="item_ingredient_preview_quantity">3</string>
    <string name="item_ingredient_preview_expiration_date">30.10.2024</string>

    <!-- activity_ai_fridge.xml -->
    <!-- Spinners -->
    <string-array name="units">
        <item>Units</item>
        <item>grams</item>
        <item>kg</item>
        <item>liters</item>
        <item>ml</item>
        <item>packs</item>
    </string-array>
    
    <string-array name="category">
        <item>Fruits &amp; Vegs</item>
        <item>Meat &amp; Fish</item>
        <item>Dairy &amp; Eggs</item>
        <item>Bakery &amp; Bread</item>
        <item>Grains &amp; Pasta</item>
        <item>Sauces &amp; Condiments</item>
        <item>Drinks</item>
        <item>Leftovers</item>
        <item>Other</item>
    </string-array>


</resources>